--- a/src/Chess.Tests/Chess.Tests.csproj
+++ b/src/Chess.Tests/Chess.Tests.csproj
@@ -73,10 +73,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KingMoves.feature</DependentUpon>
     </Compile>
-    <Compile Include="PawnMoveExplorer.feature.cs">
+    <Compile Include="PawnMoves.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>PawnMoveExplorer.feature</DependentUpon>
+      <DependentUpon>PawnMoves.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueenMoves.feature.cs">
@@ -113,9 +113,9 @@
       <LastGenOutput>KingMoves.feature.cs</LastGenOutput>
     </None>
     <None Include="packages.config" />
-    <None Include="PawnMoveExplorer.feature">
+    <None Include="PawnMoves.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>PawnMoveExplorer.feature.cs</LastGenOutput>
+      <LastGenOutput>PawnMoves.feature.cs</LastGenOutput>
     </None>
     <None Include="QueenMoves.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
