--- a/src/Chess.Tests/Chess.Tests.csproj
+++ b/src/Chess.Tests/Chess.Tests.csproj
@@ -58,10 +58,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PawnMove.feature.cs">
+    <Compile Include="PawnMoves.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>PawnMove.feature</DependentUpon>
+      <DependentUpon>PawnMoves.feature</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RookMoves.feature.cs">
@@ -77,9 +77,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="PawnMove.feature">
+    <None Include="PawnMoves.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>PawnMove.feature.cs</LastGenOutput>
+      <LastGenOutput>PawnMoves.feature.cs</LastGenOutput>
     </None>
     <None Include="RookMoves.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
